# redshift-spectra

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api-reference.md  index.md
docs/concepts/: architecture.md  data-delivery.md  multi-tenancy.md
docs/deployment/: infrastructure.md  lambda-layer.md  monitoring.md
docs/development/: contributing.md  localstack.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/performance/: csv-format.md  overview.md  session-reuse.md
docs/security/: authentication.md  authorization.md  overview.md  sql-security.md
docs/user-guide/: async-jobs.md  bulk-api.md  query-api.md
scripts/: build_layer.py  localstack-deploy.sh  package_lambda.sh
scripts/localstack/: init-aws.sh
src/spectra/: __init__.py  constants.py
src/spectra/handlers/: __init__.py  api.py  authorizer.py  bulk.py  query.py  result.py  status.py  worker.py
src/spectra/middleware/: __init__.py  tenant.py
src/spectra/models/: __init__.py  bulk.py  job.py  query.py
src/spectra/services/: __init__.py  bulk.py  export.py  job.py  redshift.py  session.py
src/spectra/utils/: __init__.py  auth.py  config.py  response.py  sql_validator.py
taskfiles/: Build.yml  CI.yml  Deploy.yml  Docs.yml  Infra.yml  Lint.yml  LocalStack.yml  Setup.yml  Test.yml  Version.yml
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets-manager/: main.tf  outputs.tf  variables.tf
terragrunt/: common.hcl  terragrunt-local.hcl  terragrunt.hcl
terragrunt/environments/dev/: account.hcl
terragrunt/environments/dev/us-east-1/: env.hcl  region.hcl
terragrunt/environments/dev/us-east-1/api-gateway/: terragrunt.hcl
terragrunt/environments/dev/us-east-1/dynamodb/: terragrunt.hcl
terragrunt/environments/dev/us-east-1/iam/: terragrunt.hcl
terragrunt/environments/dev/us-east-1/lambda/: terragrunt.hcl
terragrunt/environments/dev/us-east-1/monitoring/: terragrunt.hcl
terragrunt/environments/dev/us-east-1/s3/: terragrunt.hcl
terragrunt/environments/dev/us-east-1/secrets-manager/: terragrunt.hcl
terragrunt/environments/local/: account.hcl
terragrunt/environments/local/us-east-1/: env.hcl  region.hcl
terragrunt/environments/local/us-east-1/api-gateway/: terragrunt.hcl
terragrunt/environments/local/us-east-1/dynamodb/: terragrunt.hcl
terragrunt/environments/local/us-east-1/iam/: terragrunt.hcl
terragrunt/environments/local/us-east-1/lambda/: terragrunt.hcl
terragrunt/environments/local/us-east-1/monitoring/: terragrunt.hcl
terragrunt/environments/local/us-east-1/s3/: terragrunt.hcl
terragrunt/environments/local/us-east-1/secrets-manager/: terragrunt.hcl
terragrunt/environments/prod/: account.hcl
terragrunt/environments/prod/us-east-1/: env.hcl  region.hcl
terragrunt/environments/prod/us-east-1/api-gateway/: terragrunt.hcl
terragrunt/environments/prod/us-east-1/dynamodb/: terragrunt.hcl
terragrunt/environments/prod/us-east-1/iam/: terragrunt.hcl
terragrunt/environments/prod/us-east-1/lambda/: terragrunt.hcl
terragrunt/environments/prod/us-east-1/monitoring/: terragrunt.hcl
terragrunt/environments/prod/us-east-1/s3/: terragrunt.hcl
terragrunt/environments/prod/us-east-1/secrets-manager/: terragrunt.hcl
tests/: conftest.py
tests/integration/: __init__.py  test_bulk_workflow.py  test_localstack_api.py  test_query_workflow.py
tests/unit/: __init__.py  test_handlers_api.py  test_handlers_authorizer.py  test_handlers_bulk.py  test_handlers_query.py  test_handlers_result.py  test_handlers_status.py  test_handlers_worker.py  test_middleware_tenant.py  test_models_bulk.py  test_models_job.py  test_models_query.py  test_services_bulk.py  test_services_export.py  test_services_job.py  test_services_redshift.py  test_services_session.py  test_utils_auth.py  test_utils_config.py  test_utils_response.py  test_utils_sql_validator.py
